--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "node": "16.17.0"
   },
   "start": "node app.js",
-
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1"
   }
